public/css/w3-additions.css
.w3-btn{box-shadow: none!important;}

.w3-no-border{border:none!important}
.w3-no-focus,.w3-no-outline:focus {outline:0;}

.gear-btn{ 
	min-width:100px; 
	margin: 15px 8px 0px 8px;
}

.previousmatches-container{ height: 108px; }
.previousmatches-team{ height: 20px; }
.previousmatches-team-container{ height: 36px; }

.scouting-counter{
	font-weight:bold;
	box-sizing:content-box;
	width:30px;
	height:30px;
	padding:8px;
	border-radius:30px;
	margin-top: -12.5px;
	font-family: "Tahoma, Geneva, sans-serif";
    font-size: 20px;
}
.scouting-counter .minus{
	margin-top: -4px;
	font-size: 25px;
}

.audit-card{
	font-weight:bold;
	box-sizing:content-box;
	width: 20px;
	height: 20px;
	padding: 12px;
	margin: 2px 2px;
	font-family: "Tahoma, Geneva, sans-serif";
	font-size: 20px;
}

.theme-header{
	margin: 0px;
}

.theme-subheader{
	margin: 0px;
}

/* Tooltip container */
.tooltip {
	position: relative;
	display: inline-block;
	border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.w3-tooltip .w3-tooltiptext {
	visibility: hidden;
	width: 360px;
	background-color: #555;
	color: #fff;
	text-align: center;
	padding: 5px 0;
	border-radius: 6px;

	/* Position the tooltip text */
	position: absolute;
	z-index: 1;
	bottom: 125%;
	left: 50%;
	margin-left: -180px;

	/* Fade in tooltip */
	opacity: 0;
	transition: opacity 0.3s;
}

/* Tooltip arrow */
.w3-tooltip .w3-tooltiptext::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: #555 transparent transparent transparent;
}

.w3-tooltiptext.tooltip-white{
	background-color: #f2f2f8;
	color: #000!important;
}
.w3-tooltip .w3-tooltiptext.tooltip-white::after{
	border-color: #f2f2f8 transparent transparent transparent;
}
.w3-tooltiptext.tooltip-gray{
	background-color: #8a8a9b;
	color: #fff!important;
}
.w3-tooltip .w3-tooltiptext.tooltip-gray::after{
	border-color: #8a8a9b transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.w3-tooltip:hover .w3-tooltiptext {
	visibility: visible;
	opacity: 1;
}


@media (min-width:993px){
	.w3-col.l0{display:none;}
	.w3-col.l-half{width:4.166%;}
}

@media (min-width: 601px){
	.w3-col.m0{display:none;}
	.w3-col.m-half{width:4.166%;}
	.gear-label,.w3-label{
		text-align: right;
		padding-right: 8px;
	}
	.w3-show-small{display:none!important}
	#navBar{ display: inline!important; }
}

@media (max-width: 600px){
	.w3-col.s0{display:none;}
	.w3-col.s-half{width:4.166%;}
	.w3-hide-small{
		display: none!important;
	}
	.gear-resp90,.w3-resp90{
		width: 90%!important;
	}
	.gear-resp50,.w3-resp90{
		width: 50%!important;
	}
	/* Tooltip */
	.w3-tooltip .w3-tooltiptext{
		width: 100%;
		margin-left: 0px;
		left: 0px; 
	}
}

